--- a/index.html
+++ b/index.html
@@ -2,5 +2,13 @@
 <html>
   <head>
     <title>Sean Cheong</title>
+    <link href = "main.css" type = "text/css" rel = "stylesheet" />
   </head>
+    <ul>
+        <li class = "bar">Home</li>
+        <li class = "bar">About Me</li>
+        <li class = "bar">What I Do</li>
+        <li class = "bar">Projects</li>
+        <li class = "bar">Contact Me</li>
+    </ul>
 </html>
