--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
     <title>Sean Cheong</title>
     <link href = "main.css" type = "text/css" rel = "stylesheet" />
   </head>
+<header>
     <ul>
-        <li class = "bar">Home</li>
-        <li class = "bar">About Me</li>
-        <li class = "bar">What I Do</li>
-        <li class = "bar">Projects</li>
-        <li class = "bar">Contact Me</li>
+        <li class = "bar"><a href = "">Home</a></li>
+        <li class = "bar"><a href = "">About Me</a></li>
+        <li class = "bar"><a href = "">What I Do</a></li>
+        <li class = "bar"><a href = "">Projects</a></li>
+        <li class = "bar"><a href = "">Contact Me</a></li>
+        <li class = "bar"><a href = "">Home</a></li>        
     </ul>
+</header>
+    <body>
+    <h1 class = "hi">Hello</h1>
+    <p class = "intro">My Name is Sean.</p>
+    </body>
+    
 </html>
