--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Sean Cheong</title>
-    <link href = "main.css" type = "text/css" rel = "stylesheet" />
+    <link href = "/main.css" type = "text/css" rel = "stylesheet" />
+    <script src="/myscript.js"></script>
   </head>
 <header>
     <ul>
