--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 <html>
   <head>
     <title>Sean Cheong</title>
-    <link href = "/main.css" type = "text/css" rel = "stylesheet" />
-    <script src="/myscript.js"></script>
+    <link href = "main.css" type = "text/css" rel = "stylesheet" />
   </head>
 <header>
     <ul>
