--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
   </head>
 <header>
     <ul>
-        <li class = "bar"><a href = "">Home</a></li>
-        <li class = "bar"><a href = "">About Me</a></li>
-        <li class = "bar"><a href = "">What I Do</a></li>
-        <li class = "bar"><a href = "">Projects</a></li>
         <li class = "bar"><a href = "">Contact Me</a></li>
-        <li class = "bar"><a href = "">Home</a></li>        
+        <li class = "bar"><a href = "">Projects</a></li>
+        <li class = "bar"><a href = "">What I Do</a></li>
+        <li class = "bar"><a href = ""></a>About Me</li>
+        <li class = "bar"><a href = ""></a>Home</li>
     </ul>
 </header>
     <body>
     <h1 class = "hi">Hello</h1>
+    <img class = "down" src="down.png">
     <p class = "intro">My Name is Sean.</p>
     </body>
     
