--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 </header>
     <body>
     <h1 class = "hi">Hello</h1>
+    <a href="">
     <img class = "down" src="down.png">
+    </a>
     <p class = "intro">My Name is Sean.</p>
     </body>
     
