--- a/index.html
+++ b/index.html
@@ -13,12 +13,16 @@
         <li class = "bar"><a href = ""></a>Home</li>
     </ul>
 </header>
-    <body>
-    <h1 class = "hi">Hello</h1>
-    <a href="">
-    <img class = "down" src="down.png">
-    </a>
+    <div id = "one">
+        <body>
+            <h1 class = "hi">Hello</h1>
+            <a class = "link" href="">
+            <img class = "down" src="down.png">
+            </a>
+        </body>
+    </div>
+    <div id = two>
     <p class = "intro">My Name is Sean.</p>
-    </body>
+    </div>
     
 </html>
