--- a/index.html
+++ b/index.html
@@ -3,26 +3,44 @@
   <head>
     <title>Sean Cheong</title>
     <link href = "main.css" type = "text/css" rel = "stylesheet" />
+    <script type="text/javascript" src="myscript.js"></script>
+    <script type="text/javascript" src="zenscroll-min.js"></script>
+    <script src="typeit.min.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
 <header>
     <ul>
         <li class = "bar"><a href = "">Contact Me</a></li>
         <li class = "bar"><a href = "">Projects</a></li>
         <li class = "bar"><a href = "">What I Do</a></li>
-        <li class = "bar"><a href = ""></a>About Me</li>
-        <li class = "bar"><a href = ""></a>Home</li>
+        <li class = "bar"><a href = "#two">About Me</a></li>
+        <li class = "bar"><a href = "#top">Home</a></li>
     </ul>
 </header>
     <div id = "one">
         <body>
             <h1 class = "hi">Hello</h1>
-            <a class = "link" href="">
+            <a href="#two">
             <img class = "down" src="down.png">
             </a>
         </body>
     </div>
-    <div id = two>
-    <p class = "intro">My Name is Sean.</p>
+    <div id = "two">
+        <p id = "intro"></p>
+        <script>
+            new TypeIt('#intro', {
+            speed: 120,
+            autoStart: true
+            })
+            .type('Hello')
+            .pause(750)
+            .delete(5)
+            .pause(750)
+            .type('Hi, My name is Sean. ')
+            .pause(250)
+            .type("I am a Freshman at Nueva School")
+            
+        </script>
     </div>
     
 </html>
