--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#skills">Skills</a> </li>
-          <li> <a class="page-scroll" href="#portfolio">Portfolio</a> </li>
+          <li> <a class="page-scroll" href="#projects">Projects</a> </li>
           <li> <a class="page-scroll" href="#Experience">Experience</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
         </ul>
@@ -118,22 +118,14 @@
   </div>
 </div>
 <!-- Portfolio Section -->
-<div id="portfolio">
+<div id="projects">
   <div class="container">
     <div class="section-title text-center center">
-      <h2>Portfolio</h2>
+      <h2>Projects</h2>
       <hr>
     </div>
     <div class="categories">
       <ul class="cat">
-        <li>
-          <ol class="type">
-            <li><a href="#" data-filter="*" class="active">All</a></li>
-            <li><a href="#" data-filter=".web">Web Design</a></li>
-            <li><a href="#" data-filter=".app">App Development</a></li>
-            <li><a href="#" data-filter=".branding">Branding</a></li>
-          </ol>
-        </li>
       </ul>
       <div class="clearfix"></div>
     </div>
@@ -246,68 +238,9 @@
     </div>
   </div>
 </div>
+
 <!-- Resume Section -->
 <div id="Experience" class="text-center">
-  <div class="container">
-    <div class="section-title center">
-      <h2>Experience</h2>
-      <hr>
-    </div>
-    <div class="row">
-      <div class="col-lg-12">
-        <ul class="timeline">
-          <li>
-            <div class="timeline-image">
-              <h4>Feb 2013 <br>
-                - <br>
-                Present </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Developer</h4>
-              </div>
-              <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-              </div>
-            </div>
-          </li>
-          <li class="timeline-inverted">
-            <div class="timeline-image">
-              <h4>Nov 2011 <br>
-                - <br>
-                Jan 2013 </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">Front-end Developer</h4>
-              </div>
-              <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-              </div>
-            </div>
-          </li>
-          <li>
-            <div class="timeline-image">
-              <h4>Dec 2009 <br>
-                - <br>
-                May 2011 </h4>
-            </div>
-            <div class="timeline-panel">
-              <div class="timeline-heading">
-                <h4>Creative Agency</h4>
-                <h4 class="subheading">UX Designer</h4>
-              </div>
-              <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
   <div class="container">
     <div class="section-title center">
       <h2>Education</h2>
@@ -316,54 +249,51 @@
     <div class="row">
       <div class="col-lg-12">
         <ul class="timeline">
-          
-          <!-- Education Section-->
-          
           <li>
             <div class="timeline-image">
-              <h4>2010 <br>
+              <h4>Present <br>
                 - <br>
-                2011 </h4>
+                Sept 2017 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Master Degree of Design</h4>
+                <h4>High School</h4>
+                <h4 class="subheading">Nueva School</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>Since 1967, Nueva has offered an innovative and award winning learning experience specifically designed to meet the needs of gifted students.</p>
               </div>
             </div>
           </li>
           <li class="timeline-inverted">
             <div class="timeline-image">
-              <h4>2007 <br>
+              <h4>June 2017 <br>
                 - <br>
-                2010 </h4>
+                Sept 2014 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>Design University</h4>
-                <h4 class="subheading">Bachelor Degree of Design</h4>
+                <h4>Middle School</h4>
+                <h4 class="subheading">Woodland School</h4>
               </div>
               <div class="timeline-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>Located just west of Stanford, Woodland is an independent day school that offers a joyful approach to learning in a diverse and inclusive environment for students in early childhood through eighth grade.</p>
               </div>
             </div>
           </li>
           <li>
             <div class="timeline-image">
-              <h4>2004 <br>
+              <h4>June 2014 <br>
                 - <br>
-                2007 </h4>
+                March 2011 </h4>
             </div>
             <div class="timeline-panel">
               <div class="timeline-heading">
-                <h4>School Name</h4>
-                <h4 class="subheading">High School Degree</h4>
+                <h4>Elementary School</h4>
+                <h4 class="subheading">Stratford School</h4>
               </div>
               <div class="timeline-body">
-                <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis sed dapibus leo nec ornare diamcommodo nibh ante facilisis.</p>
+                <p>Nestled in a quiet neighborhood, our Palo Alto campus offers a balanced academic experience for both preschool and elementary school students.</p>
               </div>
             </div>
           </li>
@@ -371,40 +301,40 @@
       </div>
     </div>
   </div>
-</div>
+
 <!-- Contact Section -->
 <div id="contact" class="text-center">
   <div class="container">
     <div class="section-title center">
-      <h2>Contact</h2>
+      <h2>Contact Me</h2>
       <hr>
     </div>
     <div class="col-md-8 col-md-offset-2">
       <div class="col-md-4"> <i class="fa fa-map-marker fa-2x"></i>
-        <p>4321 California St,<br>
-          San Francisco, CA 12345</p>
+        <p>San Carlos, CA 94070</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-envelope-o fa-2x"></i>
-        <p>info@company.com</p>
+        <p>sean.k.cheong@gmail.com</p>
       </div>
       <div class="col-md-4"> <i class="fa fa-phone fa-2x"></i>
-        <p> +1 123 456 1234</p>
+        <p> +1 650 680 6000</p>
       </div>
       <div class="clearfix"></div>
     </div>
     <div class="col-md-8 col-md-offset-2">
       <h3>Leave me a message</h3>
-      <form name="sentMessage" id="contactForm" novalidate>
+      <form name="sentMessage" id="contactForm" action="https://formspree.io/sean.k.cheong@gmail.com"
+      method="POST" novalidate>
         <div class="row">
           <div class="col-md-6">
             <div class="form-group">
-              <input type="text" id="name" class="form-control" placeholder="Name" required="required">
+              <input type="text" id="name" class="form-control" placeholder="Name" required="required" name = "name">
               <p class="help-block text-danger"></p>
             </div>
           </div>
           <div class="col-md-6">
             <div class="form-group">
-              <input type="email" id="email" class="form-control" placeholder="Email" required="required">
+              <input type="email" id="email" class="form-control" placeholder="Email" required="required" name="_replyto">
               <p class="help-block text-danger"></p>
             </div>
           </div>
@@ -414,16 +344,12 @@
           <p class="help-block text-danger"></p>
         </div>
         <div id="success"></div>
-        <button type="submit" class="btn btn-default">Send Message</button>
+        <button type="submit" class="btn btn-default" value="Send">Send Message</button>
       </form>
       <div class="social">
         <ul>
-          <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-          <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-          <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-          <li><a href="#"><i class="fa fa-github"></i></a></li>
-          <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-          <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+          <li><a href="www.github.com/sean8322"><i class="fa fa-github"></i></a></li>
+          <li><a href="www.instagram.com/sean.pix"><i class="fa fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
