--- a/index.html
+++ b/index.html
@@ -348,8 +348,8 @@
       </form>
       <div class="social">
         <ul>
-          <li><a href="www.github.com/sean8322"><i class="fa fa-github"></i></a></li>
-          <li><a href="www.instagram.com/sean.pix"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.github.com/sean8322"><i class="fa fa-github"></i></a></li>
+          <li><a href="https://www.instagram.com/sean.pix"><i class="fa fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
