--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <h3>Leave me a message</h3>
-      <form name="sentMessage" id="contactForm" action="https://formspree.io/sean.k.cheong@gmail.com"
+      <form name="sentMessage" id="contactForm"
       method="POST" novalidate>
         <div class="row">
           <div class="col-md-6">
