--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<link rel="icon" href="/old/95evn7.png">
+<link rel = "icon" href="/old/95evn7.png">
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Sean Cheong</title>
@@ -324,7 +324,7 @@
     </div>
     <div class="col-md-8 col-md-offset-2">
       <h3>Leave me a message</h3>
-      <form name="sentMessage" id="contactForm"
+      <form name="sentMessage" id="contactForm" action="https://formspree.io/sean.k.cheong@gmail.com"
       method="POST" novalidate>
         <div class="row">
           <div class="col-md-6">
