--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div class="col-md-12 text-center"><img src="img/about.jpg" class="img-responsive"></div>
       <div class="col-md-8 col-md-offset-2">
         <div class="about-text">
-          <p>Hi! My name is Sean and I am a Freshman at Nueva School and an Avid Maker. I enjoy building great contraptions that invite awe and wonder.</p>
+          <p>Hi! My name is Sean and I am a Freshman at Nueva School and an Avid Maker. I enjoy building great contraptions that invite awe and wonder. I've been building for 14 years and enjoyed every moment of it. I have experience with Arduino, electronic circuits, Python, Raspberry Pi, Model Rocketry, Photography, CAD Modeling, and 3D printing.</p>
         </div>
       </div>
     </div>
