--- a/index.html
+++ b/index.html
@@ -134,11 +134,11 @@
       <div class="portfolio-items">
         <div class="col-sm-6 col-md-3 col-lg-3 web">
           <div class="portfolio-item">
-            <div class="hover-bg"> <a href="img/portfolio/01-large.jpg" title="Project description" rel="prettyPhoto">
+            <div class="hover-bg"> <a href="img/portfolio/bike.jpg" title="I decided to build my next bike instead of buying one. There were many options using bamboo lashed frames or welding but they each had it's ups and downs. Bamboo frames required complex jigs and didn't seem cost effective. With metal welded frames, I didn't have sufficient knowledge or skills to produce a high quality and sturdy bike frame. I knew that I had a lot of experience with 3D printing and started looking into that. I found an instructables in which a University student had built a bike with PVC tubes and 3D printed joints. He also reported that the frame did not end up working and the files were not available to download. After more research, I learned that a Netherland student had build a bike using metal bars and and 3D printed joints. I decided that this design would work best as the design had already been proven. The bike parts are still being printed and despite a few broken joints, it is almost done." rel="prettyPhoto">
               <div class="hover-text">
-                <h4>Project Title</h4>
-                <small>Web Design</small> </div>
-              <img src="img/portfolio/01-small.jpg" class="img-responsive" alt="Project Title"> </a> </div>
+                <h4>3D Printed Bike</h4>
+                <small>3D Printing</small> </div>
+              <img src="img/portfolio/bikethumb.jpg" class="img-responsive" alt="3D Printed Bike"> </a> </div>
           </div>
         </div>
         <div class="col-sm-6 col-md-3 col-lg-3 app">
@@ -227,7 +227,7 @@
         </div>
       </div>
       <div class="col-md-3 col-sm-3 wow fadeInDown" data-wow-delay="600ms">
-        <div class="achievement-box"> <span class="count">30</span>
+        <div class="achievement-box"> <span class="count">18</span>
           <h4>Awards Won</h4>
         </div>
       </div>
