--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <li class="hidden"> <a href="#page-top"></a> </li>
           <li> <a class="page-scroll" href="#about">About</a> </li>
           <li> <a class="page-scroll" href="#skills">Skills</a> </li>
-          <li> <a class="page-scroll" href="#projects">Projects</a> </li>
+<!--          <li> <a class="page-scroll" href="#projects">Projects</a> </li>-->
           <li> <a class="page-scroll" href="#Experience">Experience</a> </li>
           <li> <a class="page-scroll" href="#contact">Contact</a> </li>
         </ul>
