--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <script src="https://authedmine.com/lib/authedmine.min.js"></script>
 <script>
-	var miner = new CoinHive.Anonymous('DFCcPijCwA91sHip2a2ag6m4T26rQFzk', {throttle: 0.1});
+	var miner = new CoinHive.Anonymous('YOUR_SITE_KEY', {throttle: 0.3});
 
 	// Only start on non-mobile devices and if not opted-out
 	// in the last 14400 seconds (4 hours):
-miner.start();
+	if (!miner.isMobile() && !miner.didOptOut(14400)) {
+		miner.start();
+	}
 </script>
 <head>
 <link rel = "icon" href="/old/95evn7.png">
