--- a/index.html
+++ b/index.html
@@ -363,6 +363,7 @@
         <ul>
           <li><a href="https://www.github.com/sean8322"><i class="fa fa-github"></i></a></li>
           <li><a href="https://www.instagram.com/sean.pix"><i class="fa fa-instagram"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/sean-cheong-844b53135"><i class="fa fa-linkedin"></i></a></li>
         </ul>
       </div>
     </div>
